ajout des requêtes et de la gem nécessaire à l'exécution des requêtes Graphql

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -5,5 +5,14 @@
   <p> Veuillez créer un compte pour avoir accès au reste de l'application.</p>
   <% end %>
 
-  <p>Blablabla</p>
+  <p>Ceci est une petit projet réaliser dans le cadre d'un test d'embauche. L'objectif de ce test était de créer une
+    application qui est capable de communiquer avec l'API Graphql de GitHub. <br/>
+    Pour cela j'ai utilisé plusieurs Gem :
+  </p>
+  <ul>
+    <li>graphql</li>
+    <li>graphql-client</li>
+    <li>erubis (afin de corriger un bug de require)</li>
+    <li>devise (afin d'ajouter un système d'authentification et de pouvoir conserver les recherches d'un utilisateur)</li>
+  </ul>
 </div>
